--- a/BeefProj.toml
+++ b/BeefProj.toml
@@ -5,8 +5,7 @@ Name = "ulid-beef"
 DefaultNamespace = "ulid"
 
 [Configs.Debug.Win64]
-CLibType = "DynamicDebug"
-LibPaths = ["$(ProjectDir)\\libs\\debug\\ulid.lib"]
+LibPaths = ["$(ProjectDir)\\libs\\windows\\x64\\ulid_d.lib"]
 
 [Configs.Release.Win64]
-LibPaths = ["$(ProjectDir)\\libs\\release\\ulid.lib"]
+LibPaths = ["$(ProjectDir)\\libs\\windows\\x64\\ulid.lib"]
